--- a/src/css/fonts/fonts.css
+++ b/src/css/fonts/fonts.css
@@ -3907,170 +3907,5 @@ i[class^=icon-] {
   font-style: normal;
   font-display: block;
 }
-.skills__content {
-  display: flex;
-  flex-direction: column;
-}
-.skills__content .item {
-  display: flex;
-  flex-grow: 1;
-  margin-top: 5px;
-}
-.skills__content .rating {
-  display: flex;
-  flex-grow: 1;
-  justify-content: flex-end;
-  align-items: center;
-}
-.skills__content .rating div {
-  width: 13px;
-  height: 13px;
-  background: #886a5a;
-  border-radius: 50%;
-  margin-left: 5px;
-}
-.skills__content .rating div.empty {
-  background: white;
-  width: 9px;
-  height: 9px;
-  border: solid 2px;
-}
 
-body {
-  display: flex;
-  margin: 0;
-  margin-top: 20px;
-  font-family: "Roboto";
-  font-weight: 300;
-  font-size: 13px;
-  color: #886a5a;
-  line-height: 1.4em;
-}
-
-h1 {
-  font-size: 25px;
-  text-transform: uppercase;
-  letter-spacing: 0.3em;
-  color: #53382a;
-  font-weight: 300;
-}
-
-h2 {
-  font-size: 14px;
-  margin-bottom: 10px;
-  text-transform: uppercase;
-  letter-spacing: 0.3em;
-  color: #53382a;
-  font-weight: 300;
-}
-
-h3 {
-  font-size: 13px;
-  margin: 0;
-  text-transform: uppercase;
-  letter-spacing: 0.3em;
-  color: #53382a;
-  font-weight: 300;
-  letter-spacing: initial;
-}
-
-p,
-li {
-  line-height: 1.5em;
-}
-
-.sep {
-  height: 2px;
-  width: 50px;
-  background: #886a5a;
-}
-
-.left {
-  margin: 20px;
-  flex-shrink: 0;
-  width: 29%;
-}
-.left__img {
-  display: flex;
-  justify-content: center;
-}
-.left__img img {
-  max-width: 100%;
-  width: 120px;
-  border-radius: 50%;
-  border: 5px white solid;
-}
-.left__contact {
-  padding: 20px;
-  margin-top: -60px;
-  background: #885c431a;
-  padding-top: 60px;
-  border-radius: 5px;
-}
-.left__contact .item {
-  margin-top: 15px;
-  color: #53382a;
-}
-.left__contact .item i {
-  margin-right: 10px;
-}
-.left__education {
-  padding: 0 20px;
-  margin-top: 30px;
-}
-.left__languages {
-  padding: 0 20px;
-  margin-top: 30px;
-}
-.left__skills {
-  margin-top: 30px;
-  padding: 0 20px;
-}
-
-.right {
-  margin: 20px;
-  margin-right: 40px;
-  flex-grow: 1;
-}
-.right__header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.right__header h1 {
-  margin: 0;
-  margin-top: 30px;
-}
-.right__header .sep {
-  margin-top: 15px;
-  margin-bottom: 10px;
-}
-.right__header span {
-  font-size: smaller;
-  font-style: italic;
-  letter-spacing: 0.1em;
-}
-.right__technologies {
-  margin-top: 40px;
-}
-.right__experience {
-  margin-top: 40px;
-}
-.right__experience .item {
-  margin-top: 15px;
-}
-.right__experience .item p {
-  margin: 0.5em 0;
-}
-.right__experience .item ul {
-  margin: 0.5em 0;
-  padding-left: 20px;
-}
-.right__experience .item ul li {
-  line-height: 1.5em;
-}
-.right__technologies .item {
-  margin: 10px 0;
-}
-
-/*# sourceMappingURL=styles.css.map */
+/*# sourceMappingURL=fonts.css.map */
