--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,23 +1,63 @@
 $gutter: 20px;
+$dark: #53382a;
+$light: #886a5a;
+
+@import "./fonts/fonts.scss";
+@import "./skills";
+
+@mixin header {
+  text-transform: uppercase;
+  letter-spacing: 0.3em;
+  color: $dark;
+  font-weight: 300;
+}
 
 body {
   display: flex;
   margin: 0;
   margin-top: $gutter;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Roboto";
+  font-weight: 300;
+  font-size: 13px;
+  color: $light;
+  line-height: 1.4em;
 }
 
-h1, h2, h3 {
-  color: #53382a;
+h1 {
+  font-size: 25px;
+  @include header();
+}
+
+h2 {
+  font-size: 14px;
+  margin-bottom: 10px;
+  @include header();
+}
+
+h3 {
+  font-size: 13px;
   margin: 0;
+  @include header();
+  letter-spacing: initial;
 }
 
+p,
+li {
+  line-height: 1.5em;
+}
+
+.sep {
+  height: 2px;
+  width: 50px;
+  background: $light;
+}
 
 .left {
-  $img-size: 140px;
+  $img-size: 120px;
 
   margin: $gutter;
-  width: 30%;
+  flex-shrink: 0;
+  width: 29%;
 
   &__img {
     display: flex;
@@ -32,15 +72,92 @@ h1, h2, h3 {
   }
 
   &__contact {
+    padding: $gutter;
     margin-top: -$img-size / 2;
     background: #885c431a;
-    padding: $gutter;
-    padding-top: $img-size / 2 + $gutter;
+    padding-top: $img-size / 2;
     border-radius: 5px;
+
+    .item {
+      margin-top: 15px;
+      color: $dark;
+
+      i {
+        margin-right: 10px;
+      }
+    }
+  }
+
+  &__education {
+    padding: 0 $gutter;
+    margin-top: 30px;
+  }
+  
+  &__languages {
+    padding: 0 $gutter;
+    margin-top: 30px;
+  }
+  
+  &__skills {
+    margin-top: 30px;
+    padding: 0 $gutter;
   }
 }
 
 .right {
   margin: $gutter;
+  margin-right: $gutter * 2;
+  flex-grow: 1;
 
+  &__header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    h1 {
+      margin: 0;
+      margin-top: 30px;
+    }
+
+    .sep {
+      margin-top: 15px;
+      margin-bottom: 10px;
+    }
+
+    span {
+      font-size: smaller;
+      font-style: italic;
+      letter-spacing: 0.1em;
+    }
+  }
+
+  &__technologies {
+    margin-top: $gutter * 2;
+  }
+  
+  &__experience {
+    margin-top: $gutter * 2;
+    .item {
+      margin-top: 15px;
+
+      p {
+        margin: 0.5em 0;
+      }
+
+      ul {
+        margin: 0.5em 0;
+        padding-left: 20px;
+
+        li {
+          line-height: 1.5em;
+        }
+      }
+    }
+  }
+
+  &__technologies {
+    .item {
+      margin: $gutter / 2 0;
+    }
+  }
 }
